# audio_transcriber

./: .gitignore  Cargo.toml  check.json
.cargo/: config.toml
src/: api.rs  main.rs  state.rs  worker.rs
src/domain/: errors.rs  models.rs
src/handlers/: jobs.rs  mod.rs  transcribe.rs
src/services/: whisper.rs
